# embassy-poc

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
crates/actor/: Cargo.toml
crates/actor/src/: actor.rs  lib.rs
crates/buttons/: Cargo.toml
crates/buttons/src/: config.rs  event.rs  lib.rs
crates/drivers/aw9523b/: Cargo.toml
crates/drivers/aw9523b/src/: error.rs  lib.rs  register.rs
src/: main.rs
src/board/: mod.rs  ui.rs
src/bsp/: mod.rs  power.rs  ui.rs
src/bsp/i2c/: address.rs  mod.rs
src/tasks/: button_task.rs  dispatcher.rs  led_task.rs  mod.rs  system.rs  ui.rs  ui_task.rs
tests/: integration.rs
