[package]
authors = ["Andres Oliva <andres.oliva@teufel.de>"]
name = "ecospeaker"
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace]
members = [ "crates/drivers/*" ]

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal-async = "0.2.0-alpha.1"
embedded-hal = "1.0.0-alpha.10"
embassy-sync = { path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { path = "../embassy/embassy-stm32", features = ["nightly", "defmt", "memory-x", "stm32f072rb", "time-driver-any", "exti", "unstable-pac", "unstable-traits"] }
embassy-embedded-hal = { path = "../embassy/embassy-embedded-hal", features = ["nightly", "embedded-hal-async"] }
embassy-futures = { path = "../embassy/embassy-futures", features = ["defmt"] }
static_cell = "1.0"
aw9523b = { path = "crates/drivers/aw9523b", version = "0.1.0" }

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
