[package]
authors = ["Andres Oliva <andres.oliva@teufel.de>"]
name = "ecospeaker"
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace]
members = ["crates/actor", "crates/drivers/*"]

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal-async = "=1.0.0-rc.1"
embedded-hal = "=1.0.0-rc.1"
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "nightly",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "defmt",
    "memory-x",
    "stm32f072rb",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "unstable-traits",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "embedded-hal-async",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
static_cell = "1.0"
actor = { path = "crates/actor", version = "0.1.0" }
aw9523b = { path = "crates/drivers/aw9523b", version = "0.1.0" }
buttons = { path = "crates/buttons", version = "0.1.0", features = ["defmt"] }

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
