[package]
name = "actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_cell = "1.0"
embassy-futures = { path = "../../../embassy/embassy-futures" }
embassy-sync = { path = "../../../embassy/embassy-sync" }
embassy-time = { path = "../../../embassy/embassy-time" }
